# Pipeline-for-Github-Issues

./: CONTRIBUTING.md  LICENSE  README.md  pipeline_state.db  pyproject.toml  requirements.txt
docs/: data_contracts.md
pipeline/: __init__.py  __main__.py  cli.py  config.yaml  logging.py  models.py  orchestrator.py  state.py
pipeline/extractors/: csv_local.py  (+1 more)
pipeline_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
samples/: github_issues_(sample).json  github_issues_page_1.json  github_issues_page_10.json  github_issues_page_11.json  github_issues_page_12.json  github_issues_page_13.json  github_issues_page_14.json  github_issues_page_15.json  github_issues_page_16.json  github_issues_page_17.json  github_issues_page_18.json  github_issues_page_19.json  github_issues_page_2.json  github_issues_page_20.json  github_issues_page_21.json  github_issues_page_22.json  github_issues_page_23.json  github_issues_page_24.json  github_issues_page_25.json  github_issues_page_26.json  github_issues_page_27.json  github_issues_page_28.json  github_issues_page_29.json  github_issues_page_3.json  github_issues_page_30.json  github_issues_page_31.json  github_issues_page_32.json  github_issues_page_33.json  github_issues_page_34.json  github_issues_page_35.json  github_issues_page_36.json  github_issues_page_37.json  github_issues_page_38.json  github_issues_page_39.json  github_issues_page_4.json  github_issues_page_40.json  github_issues_page_41.json  github_issues_page_42.json  github_issues_page_43.json  github_issues_page_44.json  (+61 more)
tests/: test_pipeline_components.py
(+60 files in other folders)
